Modify the creation of a user admin as agreed
